# Skywall

./: README.md
Skywall/: CMakeLists.txt  CMakePresets.json  Skywall.cpp  Skywall.h  board.cpp  eval.cpp  eval.h  globals.cpp  globals.h  magics.cpp  magics.h  move.cpp  paths.h  perft.cpp  search.cpp  search.h  tests.cpp  tests.h  tunable.cpp  uci.cpp  uci.h
Skywall/testFiles/: boardStates.txt  debugLogs.txt  uciTestFens.epd
